--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: "3"
 services:
   zip_geosearch:
     container_name: zip_geosearch
+    image: docker.pkg.github.com/cbacon93/zip_geosearch/zip_geosearch
     restart: unless-stopped
-    build: .
     ports:
       - "8080:8080"
     links:
