--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   zip_geosearch:
     container_name: zip_geosearch
     image: docker.pkg.github.com/cbacon93/zip_geosearch/zip_geosearch
+    #build: .
     restart: unless-stopped
     ports:
       - "8080:8080"
@@ -10,6 +11,8 @@ services:
       - mongo
     environment:
       - DB_URL=mongodb://mongo:27017/
+    volumes:
+      - ./data_setup/data.csv:/usr/src/app/data_setup/data.csv
   mongo:
     container_name: mongo
     image: mongo
