--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,20 @@
 version: "3"
 services:
   zip_geosearch:
-    container_name: zip_geosearch
-    image: docker.pkg.github.com/cbacon93/zip_geosearch/zip_geosearch:1.1.0
+    image: ghcr.io/mahaupt/zip_geosearch:latest
     #build: .
-    restart: unless-stopped
+    restart: always
     ports:
       - "8080:8080"
-    links:
-      - mongo
     environment:
       - DB_URL=mongodb://mongo:27017/
-    volumes:
-      - ./data_setup/data.csv:/usr/src/app/data_setup/data.csv
   mongo:
-    container_name: mongo
     image: mongo
-    restart: unless-stopped
+    restart: always
     volumes:
-      - ./data:/data/db
+      - mongodata:/data/db
+    ports:
+      - "27017:27017"
+
+volumes:
+  mongodata: {}
